--- a/.github/workflows/trycicd.yml
+++ b/.github/workflows/trycicd.yml
@@ -9,7 +9,7 @@ env:
   ECS_CLUSTER: tstcluster
   ECS_SERVICE: nodeRedAppAug242025service
   ECS_TASK_DEFINITION: .aws/mynodejsapptaskdef.json
-  CONTAINER_NAME: nodeappAug142025cont
+  CONTAINER_NAME: nodeRedAppAug242025cont
   ECS_REGION: us-east-1
   ECR_REGION: us-east-1 
 
@@ -48,6 +48,9 @@ jobs:
       - name: Tag Docker Image
         run: |
           docker tag ${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG ${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
+          
+      - name: container image name
+        run: echo ${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG 
 
       - name: Push Docker Image to ECR
         run: |
